# quadstick-display

./: .gitignore  LICENSE  README.md  pyproject.toml  qs_display.py
.github/workflows/: main.yml
3d_case/: back.stl  back_arm_support.stl  front.stl  inner_rasp_support.stl  support_arm.stl
resources/install/: base_install.sh  qs_display_httpd.service  qs_display_httpd.sh
resources/quadstick_csvs/: .gitkeep  ad_infinitum.csv  alan_wake_II.csv
resources/templates/: index.html
